--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -18,62 +18,30 @@
 
   margin-right: auto;
   margin-left: auto;
-  position: absolute;
-  top: 100px;
+  position: fixed;
+  top: 50%;
   left: 50%;
+  height: 100%;
 
   transform: translate(-50%, -50%) scale(1);
   z-index: 10000;
+  overflow: auto;
 
   text-align: center;
   color: var(--dark-txt-cl);
   transition: opacity var(--anim);
 
-  @media screen and (max-width: 767px) {
-    overflow-y: scroll;
-  }
-  &.modal__buy-now {
-    top: 550px;
-    @media screen and (min-width: 768px) {
-      top: 450px;
-    }
-  }
-  &.modal__ingradients {
-    top: 1000px;
-    @media screen and (min-width: 768px) {
-      top: 1100px;
-    }
-    @media screen and (min-width: 1200px) {
-      top: 1500px;
-    }
-  }
-  &.modal__read-more {
-    top: 3150px;
-    @media screen and (min-width: 768px) {
-      top: 1600px;
-    }
-    @media screen and (min-width: 1200px) {
-      top: 2200px;
-    }
-  }
-  &.modal__map {
-    top: 5600px;
-    @media screen and (min-width: 768px) {
-      top: 3500px;
-    }
-    @media screen and (min-width: 1200px) {
-      top: 4300px;
-    }
-  }
+  &.modal__buy-now,
+  &.modal__ingradients,
   &.modal__franchise {
-    top: 5700px;
-    @media screen and (min-width: 768px) {
-      top: 3500px;
-    }
-    @media screen and (min-width: 1200px) {
-      top: 4400px;
-    }
+    top: 55%;
   }
+
+  &.modal__read-more,
+  &.modal__map {
+    top: 65%;
+  }
+
   .container {
     width: 280px;
 
